# applicazione-persa

./: .gitignore  GUIDA_TRAINING.md
latex-ocr-cpp/: CMakeLists.txt  setup.sh
latex-ocr-cpp/include/: decoder.h  encoder.h  image_preprocess.h  latex_ocr.h  model.h  tokenizer.h
latex-ocr-cpp/src/: decoder.cpp  encoder.cpp  image_preprocess.cpp  latex_ocr.cpp  main.cpp  model.cpp  tokenizer.cpp
pix2tex/: eval.py  train.py
pix2tex/dataset/: dataset.py  transforms.py
pix2tex/model/settings/: config_large.yaml  config_medium.yaml
pix2tex/models/: transformer.py  vit.py
pix2tex/utils/: utils.py
scripts/: convert_inkml.py  export_gguf.py  prepare_unified_dataset.py  regenerate_pkl.py
